--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ psycopg2-binary==2.9.9
 alembic==1.12.1
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.3.0
 python-multipart==0.0.6
 aiofiles==23.2.1
 web3==6.11.3
