--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "firebase": "firebase"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "ethers": "^6.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^6.21.0",
-    "ethers": "^6.9.0",
-    "axios": "^1.6.2",
-    "react-hook-form": "^7.49.2"
+    "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -25,6 +26,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "firebase-tools": "^14.25.0",
     "globals": "^16.5.0",
     "vite": "^7.2.2"
   }
